fixed white space between nav-menu and mobile menu

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,7 +84,7 @@
   .nav-menu {
     display: grid;
     grid-template-columns: auto;
-    background-color: #3C3C3C;
+    background-color: #AF473C;
     margin: 0;
     width: 100%;
     position: absolute;
@@ -104,11 +104,12 @@
   }
 
   .nav-menu.active {
-    background: #3C3C3C;
+    background: #AF473C;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     width: 100%;
+    margin-top: -20px;
   }
 
   .nav-links {
